--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nav-panel",
   "main": "./lib/nav-panel",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Side panel with automatic, configurable markers for easy navigation",
   "keywords": [
     "anchors",
@@ -16,9 +16,9 @@
     "markers"
   ],
   "license": "MIT",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/Ziink/atom-nav-panel"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ziink/atom-nav-panel"
   },
   "engines": {
     "atom": ">=1.2.0 <2.0.0"
@@ -26,6 +26,5 @@
   "dependencies": {
     "jquery": "^2.1.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
