--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nav-panel",
   "main": "./lib/nav-panel",
   "version": "0.0.3",
-  "description": "Side panel with automatic, configurable markers for easy navigation",
+  "description": "Side panel with automatic, configurable markers for easy navigation with support for persistent bookmarks.",
   "keywords": [
     "anchors",
     "bookmark",
